# R4C

./: .env.sample  .gitignore  Makefile  db.sqlite3  pyproject.toml
R4C/: settings.py  urls.py
robots/: forms.py  tests.py  urls.py  views.py
templates/robots/: index.html
