[tool.poetry]
name = "r4c"
version = "0.1.0"
description = ""
authors = ["Georgypython <nov_georgy@inbox.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
pytest = "^7.4.2"
flake8 = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
